fixed coding conventions

--- a/quotes/templates/quotes/about.html
+++ b/quotes/templates/quotes/about.html
@@ -1,11 +1,17 @@
+<!-- 
+File: about.html
+Author: Aaron Huang (ahuan@bu.edu),09/09/2025
+Description: The about.html template extends the base.html template and provides information about the application and Steve Jobs.
+-->
+
 {% extends 'quotes/base.html' %}
 
-    {% block content %}
-        <h2>About this Application</h2>
-        <p>This application shows images and quotes from Steve Jobs</p>
+{% block content %}
+    <h2>About this Application</h2>
+    <p>This application shows images and quotes from Steve Jobs</p>
 
-        <p>1955 - 2011</p>
-        <p>Steve Jobs was an American businessman, inventor, and investor best known for co-founding
-            the technoology company Apple Inc. We have jobs to thank for bestoying us with the iPhone, iPad, iMac, and MacBook.
-        </p>
-    {% endblock %}
+    <p>1955 - 2011</p>
+    <p>Steve Jobs was an American businessman, inventor, and investor best known for co-founding
+        the technoology company Apple Inc. We have jobs to thank for bestowing us with the iPhone, iPad, iMac, and MacBook.
+    </p>
+{% endblock %}
