--- a/quotes/templates/quotes/show_all.html
+++ b/quotes/templates/quotes/show_all.html
@@ -1,11 +1,21 @@
+<!-- 
+File: show_all.html
+Author: Aaron Huang (ahuan@bu.edu),09/09/2025
+Description: The show_all.html template extends the base.html template and displays all quotes and images of Steve Jobs.
+-->
+
 {% extends 'quotes/base.html' %}
 
-    {% block content %}
-        <h2>All Quotes and Images from Steve Jobs</h2>
-        {% for quote in quotes%}
-            <p class="quote">" {{quote}} "</p>
-        {% endfor %}
-        {% for img in images %}
-            <img src="{{img}}"/>
-        {% endfor%}
-    {% endblock %}
+{% block content %}
+    <h2>All Quotes and Images from Steve Jobs</h2>
+    
+    {% comment %} loop through all quotes in the quotes list passed from the view and display it {% endcomment %}
+    {% for quote in quotes %} 
+        <p class="quote">"{{quote}}"</p>
+    {% endfor %}
+
+    {% comment %} loop through all images in the images list passed from the view and display it {% endcomment %}
+    {% for img in images %} 
+        <img src="{{img}}"/>
+    {% endfor %}
+{% endblock %}
