--- a/quotes/templates/quotes/base.html
+++ b/quotes/templates/quotes/base.html
@@ -1,3 +1,9 @@
+<!-- 
+File: base.html
+Author: Aaron Huang (ahuan@bu.edu),09/09/2025
+Description: The base.html template provides a common structure for all pages in the application, including a navigation bar and footer.
+-->
+
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
