--- a/static/styles.css
+++ b/static/styles.css
@@ -65,3 +65,40 @@ footer{
     display: flex;
     justify-content: space-between;
 }
+
+.extra {
+    margin-left: 2vw;
+    margin-bottom: 1vh;
+    margin-top: 0;
+}
+
+.order-form{
+    margin-left: 2vw;
+    margin-bottom: 2vh;
+    margin-top: 0;
+    background-color: lightsalmon;
+    padding: 2vh;
+    border-radius: 10px;
+    box-shadow: 2px 2px 5px grey;
+    width: 50%;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 1.2em;
+    color: black;
+    gap: 1vh;
+}
+
+.center-order{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.longer-text{
+    width: 80%;
+    height: 4vw;
+    resize: vertical;
+}
+
+p{
+    overflow-wrap: break-word;
+}
