added expected time at which the order will be ready

--- a/restaurant/templates/restaurant/confirmation.html
+++ b/restaurant/templates/restaurant/confirmation.html
@@ -13,6 +13,7 @@ Description: The confirmation.html template extends the base.html template, and 
     <div class="order-form">
 
         <p>Thank you for your order! Your delicious food will be ready soon.</p>
+        <p>Estimated ready time: {{ready_time}}</p>
         <p>Name: {{name}}</p>
         <p>Phone Number: {{phone_number}}</p>
         <p>Email: {{email}}</p>
