confirmation page missing unit of prince ($)

--- a/restaurant/templates/restaurant/confirmation.html
+++ b/restaurant/templates/restaurant/confirmation.html
@@ -29,7 +29,7 @@ Description: The confirmation.html template extends the base.html template, and 
         </ul>
 
 
-        <p>total price:{{total_price}}</p> {% comment %} display total price {% endcomment %}
+        <p>total price:${{total_price}}</p> {% comment %} display total price {% endcomment %}
     </div>
 </div>
 {% endblock%}
