--- a/mini_insta/templates/mini_insta/base.html
+++ b/mini_insta/templates/mini_insta/base.html
@@ -13,5 +13,11 @@
 
 
     {% endblock %}
+    <footer>
+        <ul>
+            <li><a href = "{% url 'display_all_profile' %}"> All profiles</a></li>
+        </ul>
+    </footer>
+
 </body>
 </html>
