--- a/mini_insta/templates/mini_insta/show_all_profiles.html
+++ b/mini_insta/templates/mini_insta/show_all_profiles.html
@@ -12,20 +12,8 @@
         <h2>{{profile.display_name}}</h2>
         <p>Bio: {{profile.bio_text}}</p>
         <p>Joined: {{profile.join_date}}</p>
-        <img src = "{{profile.profile_image_url}}" alt = "{{display_name}}'s profile">
+        <a href="{% url 'display_profile' profile.pk%}"><img src = "{{profile.profile_image_url}}" alt = "{{display_name}}'s profile"></a>
     </div>
-    {% endfor %}
-</div>
-
-
-
-<div>
-    {% for article in articles %}
-        <h2>{{article.title}}</h2>
-        <h3>by {{article.author}}</h3>
-        <p>
-            {{article.text}}
-        </p>
     {% endfor %}
 </div>
 
