--- a/static/mini_insta_styles.css
+++ b/static/mini_insta_styles.css
@@ -31,6 +31,7 @@ nav{
 
 body{
     background-color: rgb(215, 234, 241);
+    font-family: "Lucida Console", Monaco, Consolas, "Courier New", 
 }
 
 main{
