--- a/static/mini_insta_styles.css
+++ b/static/mini_insta_styles.css
@@ -112,3 +112,15 @@ textarea[name="caption"] {
     display: block;
     object-fit: cover; 
 }
+
+.media-post{
+    display: flex;
+    justify-content: center;
+    gap: 12px;
+}
+.media-post img{
+    display: block;
+    width: clamp(320px, 60vw, 720px);
+    height: auto;
+    border-radius: 12px;
+}
