--- a/mini_insta/templates/mini_insta/show_profile.html
+++ b/mini_insta/templates/mini_insta/show_profile.html
@@ -31,8 +31,8 @@ Description: The show_profile.html template displays a profile in mini_insta.
         {% for post in profile.get_all_posts %} {% comment %} get all the posts from the profile and iterate through them{% endcomment %}
         {% with post.get_first_photo as photo %} {% comment %} define variable photo from the output of post.get_first_photo{% endcomment %}
                 <a href ="{% url 'show_post' post.pk %}">
-                {% if photo %}
-                        <img src = "{{ photo.image_url }}" class="post-tile">
+                {% if photo and photo.get_image_url %}
+                        <img src = "{{ photo.get_image_url }}" class="post-tile">
                 {% else %} {% comment %} show a not found/no image image {% endcomment %}
                         <img src ="https://cdn2.vectorstock.com/i/1000x1000/70/01/no-image-symbol-missing-available-icon-gallery-vector-42607001.jpg" class="post-tile">
                 {% endif %}
