conventions + added cancel for update post

--- a/mini_insta/templates/mini_insta/delete_post_form.html
+++ b/mini_insta/templates/mini_insta/delete_post_form.html
@@ -1,3 +1,8 @@
+<!--
+File: mini_insta/delete_post_form.html
+Author: Aaron Huang (ahuan@bu.edu), 10/08/2025
+Description: Confirmation page to delete a post; offers confirm (POST) and cancel (GET back to profile).
+-->
 {% extends 'mini_insta/base.html' %}
 
 {% block content %}
