formatting and styling

--- a/mini_insta/templates/mini_insta/create_post_form.html
+++ b/mini_insta/templates/mini_insta/create_post_form.html
@@ -26,8 +26,8 @@ Description: The create_post_form handles creating a form for the user to fill o
         </div>
         
         <div>
-            <button type="submit">Submit</button>
-            <a href ="{% url 'show_profile' profile.pk %}">Cancel</a>
+            <button class="btn" type="submit">Submit</button>
+            <a class="btn" href ="{% url 'show_profile' profile.pk %}">Cancel</a>
         </div>
     </div>
 </form>
