--- a/mini_insta/templates/mini_insta/delete_post_form.html
+++ b/mini_insta/templates/mini_insta/delete_post_form.html
@@ -11,10 +11,10 @@ Description: Confirmation page to delete a post; offers confirm (POST) and cance
     <h3>Are you sure you want to delete this post?</h3>
     <p>Caption: {{post.caption}}</p>
     <p>Posted at: {{post.timestamp}}</p>
-    <button type = "submit">Confirm Delete </button>
+    <button class="btn" type = "submit">Confirm Delete </button>
 </form>
 
 <form action="{% url 'show_profile' profile.pk %}" method = "GET"><!-- cancel delete -->
-    <button type="submit">Cancel</button>
+    <button class="btn" type="submit">Cancel</button>
 </form>
 {% endblock %}
