--- a/static/mini_insta_styles.css
+++ b/static/mini_insta_styles.css
@@ -124,3 +124,58 @@ textarea[name="caption"] {
     height: auto;
     border-radius: 12px;
 }
+
+.profile-img {
+      width: 10vw;
+      height: 10vw;
+      border-radius: 9999px;
+      object-fit: cover;
+      display: block;
+}
+
+ .profile-header {
+      display: flex;
+      align-items: center;
+      gap: 7rem;
+      margin-bottom: 0.5rem;
+    }
+
+#bio-text {
+      font-style: italic;
+      color: #555;
+    }
+
+.profile-username {
+    display: flex;
+    justify-content:space-between;    
+}
+
+.profile-info {
+    background-color: #f9f9f9;
+    width: 100%;
+    font-family: 'Segoe UI', sans-serif;
+    border-radius: 8px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    padding: 10px;
+    align-items: flex-start;
+}
+
+.btn {
+      display: inline-block;
+      padding: 8px 14px;
+      border-radius: 10px;
+      font-weight: 600;
+      text-decoration: none;
+      line-height: 1;
+      border: 1px solid #d1d5db; /* light gray */
+      background: #fff;
+      color: #111;
+      box-shadow: 0 1px 2px rgba(0,0,0,0.04);
+      transition: transform 80ms ease, box-shadow 120ms ease,
+                  background-color 120ms ease;
+    }
+
+.btn:hover {
+      transform: translateY(-1px);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+}
