--- a/mini_insta/templates/mini_insta/show_feed.html
+++ b/mini_insta/templates/mini_insta/show_feed.html
@@ -1,29 +1,52 @@
+<!-- 
+File: mini_insta/show_feed.html
+Author: Aaron Huang (ahuan@bu.edu), 10/16/2025
+Description: The show_feed shows posts from profiles that the current user is following.
+-->
 {% extends 'mini_insta/base.html'%}
 
 {% block content %}
-     <a href = "{% url 'show_profile' viewer.pk %}" class = "btn">←Back</a> 
+     <a href = "{% url 'show_profile' profile.pk %}" class = "btn">←Back</a> 
     <h1>Feed</h1>
     {% for post in posts %}
-        <div class = "post">
-            <p>{{post.profile.display_name}}</p>
-            <img src = "{{post.profile.profile_image_url}}" class = "profile-image">
-            <p>{{post.timestamp}}</p>
-            <img src = "{{post.get_first_photo.get_image_url}}" class = "post-image">
-            <p>{{post.caption}}</p>
-            <p>Liked by {{post.get_likes}}</p>
-            <p>Comments:</p>
-            <ul>
-                {% for comment in post.get_comments %}
-                    <li>@{{comment.profile.display_name}}: {{comment.text}}</li>
-                {% endfor %}
-            </ul>
-            {% endfor %}
-        </div>
+        <div class ="post-card">
 
-        <div class ="Footer-Nav">
-            <a href = "{% url 'show_feed' viewer.pk%}" class = "btn">home</a>
-            <a href = "{% url 'create_post' viewer.pk %}" class = "btn">+</a>
-            <a href = "{% url 'show_profile' viewer.pk %}" class = "btn"><img src ="{{viewer.profile_image_url}}"></a>
+            <div class= "card-header">
+                <a href= "{% url 'show_profile' post.profile.pk%}"><img src="{{post.profile.profile_image_url}}" class="profile-img"></a>
+                <div class = "post-info">
+                    <a href= "{% url 'show_profile' post.profile.pk%}"> <p>{{post.profile.display_name}}</p></a>
+                    <p>{{post.timestamp}}</p>
+                </div>
+            </div>
+            
+            <div>
+                <a href = "{% url 'show_post' post.pk %}">
+                {% if post.get_first_photo and post.get_first_photo.get_image_url %}
+                <img src="{{post.get_first_photo.get_image_url}}">
+                {% else %}
+                <img src ="https://cdn2.vectorstock.com/i/1000x1000/70/01/no-image-symbol-missing-available-icon-gallery-vector-42607001.jpg">
+                {% endif %}
+                </a>
+            </div>
+
+            <div class ="post-meta">
+                <div class = "post-like">
+                    <p><Strong>liked by</Strong> {{post.get_num_likes}}</p>
+                </div>
+            </div>
+            <div class ="post-caption">
+                <p><strong>@{{post.profile.display_name}}</strong> {{post.caption}}</p>
+            </div>
+            <div>
+                <p>Comments:</p>
+                <ul>
+                    {% comment %} iterate through all the comments of this post {% endcomment %}
+                    {% for comment in post.get_all_comments %} 
+                        <li>@{{comment.profile.display_name}}: {{comment.text}}</li>
+                    {% endfor %}
+                </ul>
+            </div>
         </div>
-        
+    {% endfor %}
+            
 {% endblock %}
