--- a/mini_insta/templates/mini_insta/show_profile.html
+++ b/mini_insta/templates/mini_insta/show_profile.html
@@ -14,7 +14,7 @@ Description: The show_profile.html template displays a profile in mini_insta.
         </div>
         <div>
                 <div class="profile-header">
-                <a href="{% url 'show_profile' profile.pk%}"><img src = "{{ profile.profile_image_url }}" alt = "{{ display_name }}'s profile" class="profile-img"></a>
+                <a href="{% url 'show_profile' profile.pk %}"><img src = "{{ profile.profile_image_url }}" alt = "{{ display_name }}'s profile" class="profile-img"></a>
                 {{profile.display_name}}
                 {{profile.get_num_posts}} Posts
                 <a href = "{% url 'show_followers' profile.pk %}">{{profile.get_num_followers}} Followers</a>
@@ -23,9 +23,11 @@ Description: The show_profile.html template displays a profile in mini_insta.
                 <p id="bio-text">{{profile.bio_text}}</p>
         </div>
 </div>
+{% if request.user.is_authenticated and profile.user_id == user.id %}
+<a class= "btn" href="{% url 'create_post'  %}">Create New Post</a>
+<a class= "btn" href ="{% url 'update_profile' %}" >Edit Profile</a>
+{% endif %}
 
-<a class= "btn" href="{% url 'create_post' profile.pk %}">Create New Post</a>
-<a class= "btn" href ="{% url 'update_profile' profile.pk %}" >Edit Profile</a>
 <h2>Posts</h2>
 <div class ="posts-grid">
         {% for post in profile.get_all_posts %} {% comment %} get all the posts from the profile and iterate through them{% endcomment %}
