User registration and creating Profiles

--- a/mini_insta/templates/mini_insta/base.html
+++ b/mini_insta/templates/mini_insta/base.html
@@ -22,6 +22,7 @@ Description: The base.html template provides a common structure for all pages in
     {% else %}
     Not logged in. 
     <a href = "{% url 'login' %}"> Login</a>
+    <a href = "{% url 'create_profile' %}">Sign up</a>
     {% endif %}
 
     <nav>
